# ns-3-scion

./: .gitignore  CMakeLists.txt  FAQ  README.md  TODO
build-support/: macros-and-definitions.cmake
configs/beaconing/: baseline.yaml  diversity_age_based.yaml  green_beaconing.yaml  on_demand_beaconing.yaml  pull_based.yaml
configs/timesync/: invesitgate_affected_time_servers.yaml
configs/timesync/V3/: time_sync_cfg9.yaml
configs/timesync/V4/: oscillating_ref_times.yaml
examples/scion/: CMakeLists.txt  socket-example.cc
scratch/: CMakeLists.txt
src/SCION/: CMakeLists.txt  scion.cc
src/SCION/model/: border-router-application.cc  border-router-application.h  border-router.cc  border-router.h  externs.cc  externs.h  json.hpp  packet-processor.cc  packet-processor.h  path-segment.cc  path-segment.h  path-server.cc  path-server.h  post-simulation-evaluations.cc  post-simulation-evaluations.h  pre-simulation-setup.cc  pre-simulation-setup.h  run-parallel-events.h  schedule-periodic-events.cc  schedule-periodic-events.h  scion-as.cc  scion-as.h  scion-capable-node.cc  scion-capable-node.h  scion-core-as.cc  scion-core-as.h  scion-global-scheduling.cc  scion-host.cc  scion-host.h  scion-packet.cc  scion-packet.h  scion-simulation-context.cc  scion-simulation-context.h  time-server.cc  time-server.h  user-defined-events.cc  user-defined-events.h  utils.cc  utils.h
src/SCION/model/beaconing/: baseline.cc  baseline.h  beacon-forward.h  beacon-server.cc  beacon-server.h  beacon.cc  beacon.h  diversity-age-based.cc  diversity-age-based.h  green-beaconing.cc  green-beaconing.h  latency-optimized-beaconing.cc  latency-optimized-beaconing.h  on-demand-optimization.cc  on-demand-optimization.h  scionlab-algo.cc  scionlab-algo.h
src/SCION/model/ns-3-style/: base-field.cc  base-field.h  decoded-path.cc  decoded-path.h  fields-forward.h  hop-field.cc  hop-field.h  info-field.cc  info-field.h  isd-as.h  l4-address.h  one-hop-path.cc  one-hop-path.h  raw-path.cc  raw-path.h  scion-address.cc  scion-address.h  scion-default-path-selector.cc  scion-default-path-selector.h  scion-default-reply-selector.cc  scion-header.cc  scion-header.h  scion-path-forward.h  scion-path-policy.h  scion-path-selector.h  scion-path.h  scion-reply-selector.h  scion-snet-path-meta-data.cc  scion-snet-path-meta-data.h  scion-snet-path.h  scion-svc-address.cc  scion-svc-address.h  scion-types.h
src/SCION/model/ns-3-style/extn/: end-to-end-extn.cc  end-to-end-extn.h  extn_base.cc  extn_base.h  hop-by-hop-extn.cc  hop-by-hop-extn.h  tlv_option.cc  tlv_option.h
src/SCION/model/ns-3-style/go-errors/: basic-error.cc  basic-error.h  go-errors.h  scmp-error.h
src/SCION/model/ns-3-style/gopacket++/: gopacket++.cc  gopacket++.h  udp-layer.cc  udp-layer.h
src/SCION/model/ns-3-style/raw-socket/: scion-raw-socket.cc  scion-raw-socket.h
src/SCION/model/ns-3-style/scion-stack/: scion-stack-helper.cc  scion-stack-helper.h  scion-stack.h
src/SCION/model/ns-3-style/scmp/: scmp-destination-unreachable.cc  scmp-destination-unreachable.h  scmp-echo.cc  scmp-echo.h  scmp-external-interface-down.cc  scmp-external-interface-down.h  scmp-header.cc  scmp-header.h  scmp-internal-connectivity-down.cc  scmp-internal-connectivity-down.h  scmp-packet-too-big.cc  scmp-packet-too-big.h  scmp-parameter-problem.cc  scmp-parameter-problem.h  scmp-traceroute.cc  scmp-traceroute.h  scmp-typecodes.h
src/SCION/model/ns-3-style/socket/: scion-udp-socket-impl-unchanged.cc  scion-udp-socket-impl.cc  scion-udp-socket-impl.h
src/SCION/model/ns-3-style/test/: decoded-test.cc  extn-test.cc  go-errors-test.cc  raw-path-test.cc  scion-address-test.cc  scion-header-test.cc  scion-path-test.cc  scion-test-data.h
src/SCION/model/util/: endian-utils.h  function_ref.h  iter-util.cc  iterator-util.h  placeholder.h  range_ref.h  scion-utils.h  sha256.cc  sha256.h  string-utils.cc  string-utils.h
src/SCION/proto/control_plane/experimental/v1/: seg_detached_extensions.grpc.pb.cc  seg_detached_extensions.grpc.pb.h  seg_detached_extensions.pb.cc  seg_detached_extensions.pb.h
src/SCION/proto/control_plane/v1/: cppki.grpc.pb.cc  cppki.grpc.pb.h  cppki.pb.cc  cppki.pb.h  drkey.grpc.pb.cc  drkey.grpc.pb.h  drkey.pb.cc  drkey.pb.h  renewal.grpc.pb.cc  renewal.grpc.pb.h  renewal.pb.cc  renewal.pb.h  seg.grpc.pb.cc  seg.grpc.pb.h  seg.pb.cc  seg.pb.h  seg_extensions.grpc.pb.cc  seg_extensions.grpc.pb.h  seg_extensions.pb.cc  seg_extensions.pb.h  svc_resolution.grpc.pb.cc  svc_resolution.grpc.pb.h  svc_resolution.pb.cc  svc_resolution.pb.h
src/SCION/proto/crypto/v1/: signed.grpc.pb.cc  signed.grpc.pb.h  signed.pb.cc  signed.pb.h
src/SCION/proto/daemon/v1/: daemon.grpc.pb.cc  daemon.grpc.pb.h  daemon.pb.cc  daemon.pb.h
src/SCION/proto/discovery/v1/: discovery.grpc.pb.cc  discovery.grpc.pb.h  discovery.pb.cc  discovery.pb.h
src/SCION/proto/drkey/v1/: drkey.grpc.pb.cc  drkey.grpc.pb.h  drkey.pb.cc  drkey.pb.h
src/SCION/proto/gateway/v1/: control.grpc.pb.cc  control.grpc.pb.h  control.pb.cc  control.pb.h  prefix.grpc.pb.cc  prefix.grpc.pb.h  prefix.pb.cc  prefix.pb.h
src/SCION/proto/hidden_segment/v1/: hidden_segment.grpc.pb.cc  hidden_segment.grpc.pb.h  hidden_segment.pb.cc  hidden_segment.pb.h
src/core/model/: matrix-array.h  simple-ref-count.h  simulation-singleton.h  singleton.h  val-array.h
src/fnss/: CMakeLists.txt
src/fnss/examples/: CMakeLists.txt
src/fnss/model/: pair.h  rapidxml.hpp
src/internet/model/: ipv4-end-point.cc  ipv4-end-point.h  udp-header.h  udp-l4-protocol.cc  udp-l4-protocol.h
src/lte/model/: lte-rlc-am.cc  lte-rlc-um.cc
src/network/: CMakeLists.txt
src/network/examples/: CMakeLists.txt  packet-socket-experiment.cc
topology/: 10_geo_rel.xml  10_geo_rel_annotated.xml  15_geo_rel.xml  15_geo_rel_annotated.xml  5_geo_rel.xml  5_geo_rel_annotated.xml  5_geo_rel_annotated_modified.xml  add_type_to_topo.py  caida10.xml  scionlab_core_topology.xml  scionlab_core_topology_2.xml  scionlab_core_topology_isd.xml
user_defined_events/timesync/: oscillating_ref_times.json
utils/tests/: test-ns3.py
(+855 files in other folders)
